# macro_watch

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
macro_watch/: __init__.py  analytics.py  data_loader.py  sectors.py  visualizer.py  web_export.py  weekly_report.ipynb
tests/: test_analytics.py  test_data_loader.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: charts.ts  main.ts  styles.css  theme.ts  types.ts  ui.ts
