[project]
name = "macro-watch"
version = "0.1.0"
description = "Weekly cross-asset macro market analysis: ingestion, analytics, and visualization"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "yfinance>=1.4.1",
]
