[project]
name = "macro-watch"
version = "0.1.0"
description = "Weekly cross-asset macro market analysis: ingestion, analytics, and visualization"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
